manifests/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  namespace: zurg
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        workload-strength: ram-heavy
      containers:
        - name: jellyfin-container
          image: jellyfin/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
              
            - name: cache
              mountPath: /cache
              
            - name: zurg-mount
              mountPath: /zurg-mount
              mountPropagation: HostToContainer
              
      volumes:
        - name: config
          hostPath:
            path: /volume1/k3s/media/jellyfin/config
            type: DirectoryOrCreate
                
        - name: cache
          hostPath:
            path: /volume1/k3s/media/jellyfin/cache
            type: DirectoryOrCreate
                
        - name: zurg-mount
          hostPath:
            path: /volume1/k3s/media/mnt
